--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+	<div class="content">
+		<div id="Nav"></div>
+		<div id="Index"></div>
+	</div>
 </body>
 </html>
