Jamal Made a Logo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WEBSITE NAME INSERT</title>
+	<title>Guardians</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -14,7 +14,9 @@
 </head>
 <body>
 	<div class="content">
-		<div id="Nav"></div>
+		<div id="Nav">
+			<img src="jamallogo.png">
+		</div>
 		<div id="Index"></div>
 	</div>
 </body>
