--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="content">
 		<div id="Nav">
-			<img src="jamallogo.png">
+			<img id="logo" src="jamallogo.png">
 		</div>
 		<div id="Index"></div>
 	</div>
