--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Guardians</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href='http://fonts.googleapis.com/css?family=Oxygen:300' rel='stylesheet' type='text/css'>
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
@@ -17,7 +18,13 @@
 		<div id="Nav">
 			<img id="logo" src="jamallogo.png">
 		</div>
-		<div id="Index"></div>
+		<div class="index">
+		<video autoplay loop poster="ADD PIC HERE" id="bgvid">
+			<source src="websiteback.mp4" type="video/mp4">
+		</video>		
+			<h1 id="Indextext">Donate and become a Guardian!</h1>
+			<button class="donatebutton1">Donate</button>
+		</div>
 	</div>
 </body>
 </html>
