--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Guardians</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Oxygen:300' rel='stylesheet' type='text/css'>
+	<link rel="icon" href="KTnaMjgTq.ico" type="image/x-icon"/>
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
