--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div class="content">
+	<div class="wrapper">
 		<div id="Nav">
 			<img id="logo" src="jamallogo.png">
 		</div>
