--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<img id="logo" src="jamallogo.png">
 		</div>
 		<div class="index">
-		<video autoplay loop poster="ADD PIC HERE" id="bgvid">
+		<video autoplay loop poster="http://blogs.bootsnall.com/corrieguatemala/files/2008/07/100_0181.JPG" id="bgvid">
 			<source src="websiteback.mp4" type="video/mp4">
 		</video>		
 			<h1 id="Indextext">Donate and become a Guardian!</h1>
