--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 	<div class="wrapper">
 		<div id="Nav">
 			<img id="logo" src="jamallogo.png">
+			<ul>
+				<li>Home</li>
+				<li>About Us</li>
+				<li>Species Index</li>
+				<li>News</li>
+				<li>Donate</li>
+			</ul>
 		</div>
 		<div class="index">
 		<video autoplay loop poster="http://blogs.bootsnall.com/corrieguatemala/files/2008/07/100_0181.JPG" id="bgvid">
