--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<div class="wrapper">
-		<div id="Nav">
+		<div id="navTop">
 			<img id="logo" src="jamallogo.png">
 		</div>
 		<div class="index">
@@ -28,6 +28,6 @@
 			<h1 id="Indextext">Donate and become a Guardian!</h1>
 			<button class="donatebutton1">Donate</button>
 		</div>
-	</div>
+		<div id="navBot"> </div>
 </body>
 </html>
