--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Oxygen:300' rel='stylesheet' type='text/css'>
 	<link rel="icon" href="KTnaMjgTq.ico" type="image/x-icon"/>
-	<embed loop src="Jungle Sounds.mp3" style="float" autostart="true" width="0" height="0" class="audioplayer"></embed>
+	<embed loop="loop" src="Jungle Sounds.mp3" style="float" autostart="true" width="0" height="0" class="audioplayer"></embed>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<!-- Optional theme -->
