Added tabs to bottom navbar.  Needs work still.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 	<div class="wrapper">
 		<div id="navTop">
@@ -28,6 +29,13 @@
 			<h1 id="Indextext">Donate and become a Guardian!</h1>
 			<button class="donatebutton1">Donate</button>
 		</div>
-		<div id="navBot"> </div>
+		<div id="navBot"> 
+			<ul class="nav nav-tabs nav-justified">
+			  <li role="presentation" class="active"><a href="#"> Home </a></li>
+			  <li role="presentation"> <a href="#"> About Us </a></li>
+			  <li role="presentation"> <a href="#"> Research </a></li>
+			  <li role="presentation"> <a href="#"> Donate </a></li>
+			</ul>
+		</div>
 </body>
 </html>
