Revert "Resized the tabs & font. WIP"
This reverts commit 882cc5d00b0a910047e986e6bc0e28ea63246c23.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
 	<title>Guardians</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Oxygen:300' rel='stylesheet' type='text/css'>
 	<link rel="icon" href="KTnaMjgTq.ico" type="image/x-icon"/>
 	<embed loop src="Jungle Sounds.mp3" style="float" autostart="true" width="0" height="0" class="audioplayer"></embed>
