centered image and removed top navbar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 	<div class="wrapper">
-		<div id="navTop">
+		<div id="">
 			<img id="logo" src="jamallogo.png">
 		</div>
 		<div class="index">
