--- a/page2index.html
+++ b/page2index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
 
-	<title>Guardians - Home</title>
+<head>
+	<title> Guardians - About Us </title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Oxygen:300' rel='stylesheet' type='text/css'>
 	<link rel="icon" href="KTnaMjgTq.ico" type="image/x-icon"/>
-	<embed loop src="Jungle Sounds.mp3" style="float" autostart="true" width="0" height="0" class="audioplayer"></embed>
+
+	<!-- Sorry, Anthony. The sound was irritating me while working on adding pages:)
+	<embed loop src="Jungle Sounds.mp3" style="float" autostart="true" width="0" height="0" class="audioplayer"> </embed>
+
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
@@ -17,22 +20,12 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="style.css">
-	</head>
+</head>
 
 <body>
-	<div class="wrapper">
-		<div id="">
-			<img id="logo" src="jamallogo.png">
-		</div>
-		<div class="index">
-		<video autoplay loop poster="ADD PIC HERE" id="bgvid">
-			<source src="websiteback.mp4" type="video/mp4">
-		</video>		
-			<h1 id="Indextext">Donate and become a Guardian!</h1>
-			<button class="donatebutton1">Donate</button>
-		</div>
-		<!-- Bottom navbar -->
-		<div id="navBot"> 
+	<p> AYYE WE GOT A SECOND PAGE :D </p>
+
+	<div id="navBot"> 
 			<ul class="nav nav-tabs nav-justified">
 			  <li role="presentation"> <a href="index.html"> Home </a></li>
 			  <li role="presentation"> <a href="page2index.html"> About Us </a></li>
