--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</div>
 		<h1 id="Indextext1">Welocome to the Grove!</h1>
 		<h2 id="Indextext2">Who are we.</h2>
-		<p id="Indextext3">.</p>
+		<p id="Indextext3"></p>
 		<div class="index">
 		<video autoplay loop poster="ADD PIC HERE" id="bgvid">
 			<source src="websiteback.mp4" type="video/mp4">
