--- a/page2index.html
+++ b/page2index.html
@@ -24,6 +24,7 @@
 
 <body>
 	<p> AYYE WE GOT A SECOND PAGE :D </p>
+	<p> re-commit </p>
 
 	<div id="navBot"> 
 			<ul class="nav nav-tabs nav-justified">
