--- a/page3index.html
+++ b/page3index.html
@@ -24,6 +24,7 @@
 
 <body>
 	<p> AYYYYE WE GOT A THIRDDD PAGE :O ?! </p>
+	<p> re-commit </p>
 
 	<div id="navBot"> 
 			<ul class="nav nav-tabs nav-justified">
