--- a/page4index.html
+++ b/page4index.html
@@ -24,6 +24,7 @@
 
 <body>
 	<p> You get the point by now.. :D</p>
+	<p> re-commit </p>
 
 	<div id="navBot"> 
 			<ul class="nav nav-tabs nav-justified">
