--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 		<div id="">
 			<img id="logo" src="jamallogo.png">
 		</div>
+		<h1 id="welcome">Guardians of The Grove</h1>
+
 		<div class="index">
 		<video autoplay loop poster="ADD PIC HERE" id="bgvid">
 			<source src="websiteback.mp4" type="video/mp4">
