--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
 
+<head>
 	<title>Guardians - Home</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Oxygen:300' rel='stylesheet' type='text/css'>
@@ -9,19 +9,16 @@
 	<embed loop src="Jungle Sounds.mp3" style="float" autostart="true" width="0" height="0" class="audioplayer"></embed>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
 	<link rel="stylesheet" type="text/css" href="style.css">
-	</head>
+</head>
 
 <body>
 	<div class="wrapper">
-		<div id="">
+		<div>
 			<img id="logo" src="jamallogo.png">
 		</div>
 		<div class="index">
