yo suyash fix the home page

--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
 		<div>
 			<img id="logo" src="jamallogo.png">
 		</div>
+	
 		<h1 id="welcome">Guardians of The Grove</h1>
+		<p id="welcometext">We are the Gurdians of the grove.We are here to bring awarness to the endargment of animals.</p>          
+        <h1 id="baby">  <a href="page2index.html" >Click here to learn more </h1>
 
 		<div class="index">
 		<video autoplay loop poster="ADD PIC HERE" id="bgvid">
 			<source src="websiteback.mp4" type="video/mp4">
-		</video>		
+		</video>	
+
+		</div>	
 			<h1 id="Indextext">Donate and become a Guardian!</h1>
 			<button class="donatebutton1">Donate</button>
 		</div>
