--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+
 	<title>Guardians - Home</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Oxygen:300' rel='stylesheet' type='text/css'>
 	<link rel="icon" href="KTnaMjgTq.ico" type="image/x-icon"/>
-	<embed loop="loop" src="Jungle Sounds.mp3" style="float" autostart="true" width="0" height="0" class="audioplayer"></embed>
+	<embed loop src="Jungle Sounds.mp3" style="float" autostart="true" width="0" height="0" class="audioplayer"></embed>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
 	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
+	</head>
 
 <body>
 	<div class="wrapper">
-		<div>
+		<div id="">
 			<img id="logo" src="jamallogo.png">
 		</div>
-	
 		<h1 id="welcome">Guardians of The Grove</h1>
 		<p id="welcometext">We are the Gurdians of the grove.We are here to bring awarness to the endargment of animals.</p>          
-        <h1 id="baby">  <a href="page2index.html" >Click here to learn more </h1>
+       <a href="page2index.html" >Click here to learn more </a>
 
 		<div class="index">
 		<video autoplay loop poster="ADD PIC HERE" id="bgvid">
 			<source src="websiteback.mp4" type="video/mp4">
-		</video>	
-
-		</div>	
+		</video>		
 			<h1 id="Indextext">Donate and become a Guardian!</h1>
 			<button class="donatebutton1">Donate</button>
 		</div>
@@ -46,3 +46,4 @@
 		</div>
 </body>
 </html>
+    
