--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</div>
 		<h1 id="welcome">Guardians of The Grove</h1>
 		<p id="welcometext">We are the Gurdians of the grove.We are here to bring awarness to the endargment of animals.</p>          
-       <a href="page2index.html" >Click here to learn more </a>
+      <h1 id="link"> <a href="page2index.html" >Click here to learn more </a>
 
 		<div class="index">
 		<video autoplay loop poster="ADD PIC HERE" id="bgvid">
